--- a/static/css/signup.css
+++ b/static/css/signup.css
@@ -5,7 +5,6 @@
     height: 100vh;
     text-align: center;
 }
-
 .box1 {
     display: flex;
     flex: 1 1 auto;
@@ -15,9 +14,8 @@
     border-radius: 6px;
     padding: 15px;
     margin: auto;
-    max-width: 380px;
-}
-
+    max-width: 380px; 
+  }
 .box2 {
     flex-flow: column wrap;
     background-color: rgb(255, 255, 255);
@@ -28,17 +26,15 @@
     margin-right: 10px;
     margin-left: 10px;
 }
-
 .welcome_text {
     margin-top: 0px;
     font-size: 20px;
     text-align: center;
     display: flex;
     color: #814444;
-    font-weight: 700
+    font-weight:700
 }
-
-.input_nick, .input_name, .input_email, .input_pw {
+.input_nick, .input_username, .input_email, .input_pw {
     box-sizing: border-box;
     width: 100%;
     height: 50px;
@@ -50,10 +46,9 @@
     background-color: #fff;
     font-size: 15px;
     color: #000;
-    box-shadow: 0 0 0 30px #fff inset !important;
+    box-shadow: 0 0 0 30px #fff inset!important;
 }
-
-.login_btn {
+.signup_btn {
     display: block;
     margin-top: 35px;
     box-sizing: border-box;
@@ -66,7 +61,6 @@
     background-color: #814444;
     color: #fff;
 }
-
 .text_box {
     font-size: 12px;
     font-weight: 800;
