--- a/templates/signup.html
+++ b/templates/signup.html
@@ -22,15 +22,15 @@
             <form>
                 <div class="text_box">닉네임</div>
                 <input class="input_nick" type="text" id="nickname" placeholder="Nickname" value="">
-                <div class="text_box">이름</div>
-                <input class="input_name" type="password" id="name" placeholder="Name" value="">
+                <div class="text_box">아이디</div>
+                <input class="input_username" type="text" id="username" placeholder="ID" value="">
                 <div class="text_box">이메일</div>
                 <input class="input_email" type="text" id="email" placeholder="Email" value="">
                 <div class="text_box">비밀번호</div>
                 <input class="input_pw" type="password" id="password" placeholder="Password" value="">
                 <div class="text_box">비밀번호 확인</div>
                 <input class="input_pw" type="password" id="password2" placeholder="Password Check" value="">
-                <button type="signup_submit" class="login_btn">완료</button>
+                <button class="signup_btn" type="button" id="signup_submit">완료</button>
             </form>
         </div>
     </div>
@@ -38,35 +38,77 @@
 </body>
 
 <script>
-    // 마우스 포커스가 들어오면 placeholder 값을 비움
     $(document).ready(function () {
-        $('.input_nick, .input_name, .input_email, .input_pw').focus(function () {
+        $('.input_nick, .input_username, .input_email, .input_pw').focus(function () {
             $(this).attr('placeholder', '');
         }).blur(function () {
             if ($(this).val() === '') {
                 $(this).attr('placeholder', $(this).data('placeholder'));
             }
         });
-        // 페이지 로드 시 각 input의 placeholder 다시 보이게
-        $('.input_nick, .input_name, .input_email, .input_pw').each(function () {
+
+        $('.input_nick, .input_username, .input_email, .input_pw').each(function () {
             $(this).data('placeholder', $(this).attr('placeholder'));
         });
     });
+
+    function signup(){
+        let nickname = $('#nickname').val();
+        let username = $('#username').val();
+        let email = $('#email').val();
+        let password = $('#password').val();
+        let password2 = $('#password2').val();
+
+        if (nickname === '' || username === '' || email === '' || password === '' || password2 === '') {
+            alert('입력값을 모두 채워주세요.');
+            return;
+        }
+
+        if (password.length < 8) {
+            alert('비밀번호는 8자리 이상이어야 합니다.');
+            return;
+        }
+
+        if (password !== password2) {
+            alert('입력한 비밀번호가 일치하지 않습니다.');
+            return;
+        }
+
+        $.ajax({
+            url: "http://127.0.0.1:8000/auth/signup/",
+            dataType: "json",
+            data: {
+                username: username,
+                password: password,
+                password2: password2,
+                nickname: nickname,
+                phone_number: "" 
+            },
+            method: "POST",
+            success: function (data) {
+                console.log("성공");
+                alert("성공")
+                location.replace("{% url 'main' %}");
+            },
+
+            error: function (request, status, error) {
+                console.log("실패");
+            },
+            complete: function () {
+                console.log("성공");
+            }
+        })
+    }
+
     $('#signup_submit').click(function () {
+        signup()
     });
 
     $(document).keyup(function (event) {
         if (event.which === 13) {
+            $('#signup_submit').click();
         }
     });
-
-    function signup(){
-        let username = $('#username').val();
-        let name = $('#name').val();
-        let email = $('#email').val();
-        let password = $('#password').val();
-        let password2 = $('#password2').val();
-    }
 
 </script>
 
