[feat] media root

--- a/templates/login.html
+++ b/templates/login.html
@@ -15,7 +15,7 @@
     <div class="layouta_container">
         <div class="box1">
             <div class="box2">
-                <img src="/static/img/logo.png" alt="logo">
+                <img src="{% get_media_prefix %}img/logo.png" alt="logo">
                 <div class="box3">
                     <div class="welcome_text" dir="auto">퍼펙트홈즈에 로그인하고</div>
                     <div class="welcome_text" dir="auto">다양한 서비스를 이용하세요.</div>
