--- a/templates/signup.html
+++ b/templates/signup.html
@@ -15,7 +15,7 @@
         <div class="box1">
 
             <div class="box2">
-                <img src="/static/img/logo.png" alt="logo">
+                <img src="/media/img/logo.png" alt="logo">
                 <div class="welcome_text" dir="auto">회원가입을 위해</div>
                 <div class="welcome_text" dir="auto">정보를 입력해주세요.</div>
             </div>
