--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -15,7 +16,7 @@
     <div class="layouta_container">
         <div class="box1">
             <div class="box2">
-                <img src="{% get_media_prefix %}img/logo.png" alt="logo">
+                <img src="{% static 'images/logo.png' %}" alt="logo">
                 <div class="box3">
                     <div class="welcome_text" dir="auto">퍼펙트홈즈에 로그인하고</div>
                     <div class="welcome_text" dir="auto">다양한 서비스를 이용하세요.</div>
