--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+{% load static %}
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +16,7 @@
         <div class="box1">
 
             <div class="box2">
-                <img src="/images/logo.png" alt="logo">
+                <img src="{% static 'images/logo.png' %}" alt="logo">
                 <div class="welcome_text" dir="auto">회원가입을 위해</div>
                 <div class="welcome_text" dir="auto">정보를 입력해주세요.</div>
             </div>
@@ -52,7 +53,7 @@
         });
     });
 
-    function signup(){
+    function signup() {
         let nickname = $('#nickname').val();
         let username = $('#username').val();
         let email = $('#email').val();
