--- a/templates/main.html
+++ b/templates/main.html
@@ -112,11 +112,39 @@
             strokeOpacity: 0.5,
             strokeWeight: 2,
         });
+        
+        sendCoordinatesToServer(latlng.getLat(), latlng.getLng());
     }
 
     // 좌표 전송
     function sendCoordinatesToServer(lat, lng) {
-        
+        $.ajax({
+            url: '/facility/around/',
+            method: 'GET',
+            data: {
+                lat: lat,
+                lng: lng
+            },
+            success: function (response) {
+                if (Array.isArray(response) && response.length > 0) {
+                    for (var i = 0; i < response.length; i++) {
+                        var facility = response[i];
+                        var facilityLatlng = new naver.maps.LatLng(facility.lat, facility.lng);
+                        var facilityMarker = new naver.maps.Marker({
+                            map: map,
+                            position: facilityLatlng,
+                            title: facility.name
+                        });
+                    }
+                } else {
+                    alert('주변에 시설이 없습니다.');
+                }
+            },
+            error: function (request, status, error) {
+                console.error('주변 시설을 불러오는 중 에러 발생', error);
+                alert('주변 시설을 불러오지 못했습니다. 다시 시도해주세요.');
+            }
+        });
     }
     
 </script>
