--- a/templates/main.html
+++ b/templates/main.html
@@ -23,7 +23,7 @@
     // 목포를 기본 지도로
     function selectMapList() {
         map = new naver.maps.Map('map', {
-            center: new naver.maps.LatLng(34.8026, 126.3898), 
+            center: new naver.maps.LatLng(34.8026, 126.3898),
             zoom: 14,
         });
 
@@ -37,7 +37,7 @@
     // 지도를 그려주는 함수
     selectMapList();
 
-    // 검색한 주소의 정보를 insertAddress 함수로 
+    // 검색한 주소의 정보를 insertAddress 함수로
     function searchAddressToCoordinate(address) {
         naver.maps.Service.geocode({
             query: address
@@ -48,10 +48,11 @@
             if (response.v2.meta.totalCount === 0) {
                 return alert('올바른 주소를 입력해주세요.');
             }
-            
+
             var htmlAddresses = [],
                 item = response.v2.addresses[0],
-                point = new naver.maps.Point(item.x, item.y);
+                latlng = new naver.maps.LatLng(item.y, item.x);
+
             if (item.roadAddress) {
                 htmlAddresses.push('[도로명 주소] ' + item.roadAddress);
             }
@@ -62,14 +63,14 @@
                 htmlAddresses.push('[영문명 주소] ' + item.englishAddress);
             }
 
-            insertAddress(item.roadAddress, item.x, item.y);
+            insertAddress(item.roadAddress, latlng);
         });
     }
 
     // 주소 검색 버튼 이벤트
     $('#address').on('keydown', function(e) {
         var keyCode = e.which;
-        if (keyCode === 13) { 
+        if (keyCode === 13) {
             searchAddressToCoordinate($('#address').val());
         }
     });
@@ -77,15 +78,15 @@
         e.preventDefault();
         searchAddressToCoordinate($('#address').val());
     });
-    naver.maps.Event.once(map, 'init_stylemap', initGeocoder);
+
+    naver.maps.onJSContentLoaded = selectMapList;
 
     // 검색한 주소 지도에 마커 표시
-    function insertAddress(address, lat, lng) {
-        var latlng = new naver.maps.LatLng(lng, lat);
+    function insertAddress(address, latlng) {
         updateMarker(latlng);
         map.setCenter(latlng);
         map.setZoom(15);
-        sendCoordinatesToServer(lat, lng);
+        sendCoordinatesToServer(latlng.y, latlng.x);
     }
 
     // 마커 업데이트
@@ -101,8 +102,8 @@
             position: latlng,
         });
 
-         // 반경 생성
-         circle = new naver.maps.Circle({
+        // 반경 생성
+        circle = new naver.maps.Circle({
             map: map,
             center: latlng,
             radius: 500, // 반경 500m
@@ -112,8 +113,8 @@
             strokeOpacity: 0.5,
             strokeWeight: 2,
         });
-        
-        sendCoordinatesToServer(latlng.getLat(), latlng.getLng());
+
+        sendCoordinatesToServer(latlng.y, latlng.x);
     }
 
     // 좌표 전송
@@ -146,6 +147,5 @@
             }
         });
     }
-    
 </script>
 </html>
