--- a/static/css/index.css
+++ b/static/css/index.css
@@ -91,8 +91,9 @@ video.bg-video {
   left: 0;
   height: 100%;
   width: 70%;
-  background-color: rgba(0, 0, 0, 0.85);
+  background-color: rgba(255, 255, 255, 0.7);
 }
+
 .masthead .masthead-content {
   position: absolute;
   top: 50%;
@@ -177,10 +178,12 @@ video.bg-video {
 
 .mb-4 {
   margin-bottom: 1.5rem !important;
+  color: #000000;
 }
 
 .mb-5 {
   margin-bottom: 3rem !important;
+  color: #000000;
 }
 
 .row {
@@ -244,8 +247,8 @@ video.bg-video {
 
 .btn-primary {
   --bs-btn-color: #fff;
-  --bs-btn-bg: #2a5555;
-  --bs-btn-border-color: #2a5555;
+  --bs-btn-bg: #814444;
+  --bs-btn-border-color: #814444;
   --bs-btn-hover-color: #fff;
   --bs-btn-hover-bg: #244848;
   --bs-btn-hover-border-color: #224444;
@@ -255,8 +258,8 @@ video.bg-video {
   --bs-btn-active-border-color: #204040;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #fff;
-  --bs-btn-disabled-bg: #2a5555;
-  --bs-btn-disabled-border-color: #2a5555;
+  --bs-btn-disabled-bg: #814444;
+  --bs-btn-disabled-border-color: #814444;
 }
 
 .bg-overlay {
