--- a/templates/main.html
+++ b/templates/main.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=2yf3rqafqw&submodules=geocoder"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+    <link href="/static/css/main.css" rel="stylesheet">
     <title>메인 페이지</title>
 </head>
 <body>
+    <div id="map"></div>
+
     <div class="search">
         <input id="address" type="text" placeholder="검색할 주소">
         <input id="submit" type="button" value="주소검색">
-    </div>
-
-    <div id="map" style="width:100%; height:700px;"></div>
+    </div>  
 </body>
 <script>
     var map;
