--- a/templates/main.html
+++ b/templates/main.html
@@ -13,7 +13,7 @@
         header {
             list-style-type: none;
             background-color: white;
-            width: 62px;
+            width: 66px;
             padding: 0;
             margin:  0;
             height: 100%;
@@ -30,6 +30,7 @@
             color: #000;
             padding: 8px 15px 8px 15px;
             font-weight: bold;
+            font-size: 12px;
         }
     
         li a.job {
@@ -43,11 +44,12 @@
         }
 
         img {
-            width: 265px;
-            height: 70px;
+            width: 60px;
+            height: 60px;
             margin-bottom: 20px;
             display: flex;
         }
+
     
     </style>
 
@@ -62,7 +64,7 @@
     
     <header>
         <h1 class="logo_box"><a class="logo_box" href="#"> <img src="/static/img/logo1.png" alt="logo"></a></h1>
-        <li><a href="#">지도 홈</a></li>
+        <li><a href="#">지도</a></li>
         <li><a href="#">주변</a></li>
         <li><a href="#">저장</a></li>
         <li><a href="#">더보기</a></li>
