--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
                     <form id="contactForm" data-sb-form-api-token="API_TOKEN">
                         <div class="row input-group-newsletter">
                             <div class="col-auto">
-                                <button id="reservationButton" class="btn btn-primary" type="submit">시작하기</button>
+                                <button id="reservationButton" class="btn btn-primary" type="submit" href="{% url 'main' %}">시작하기</button>
                             </div>
                         </div>
                     </form>
