--- a/templates/signup.html
+++ b/templates/signup.html
@@ -76,7 +76,7 @@
         }
 
         $.ajax({
-            url: "http://127.0.0.1:8000/auth/signup/",
+            url: "/auth/signup/",
             dataType: "json",
             data: {
                 username: username,
