--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4,12 +4,64 @@
     left: 0;
     width: 100%;
     height: 683px;
-    z-index: 1; /* 검색 및 사이드 바보다 낮은 z-index 값 */
+    z-index: 100;
 }
 
 .search {
     position: absolute;
     top: 10px;
     left: 95px;
-    z-index: 2; /* 맵보다 높은 z-index 값 */
+    z-index: 200;
+}
+
+.search_wrap {
+    position: relative;
+}
+
+.search_box {
+    position: relative;
+    z-index: 110;
+    height: 42px;
+    padding-left: 45px;
+    border: 2px solid rgb(25, 206, 96);
+    border-radius: 5px;
+}
+
+.iWgJnT .button_search {
+    overflow: hidden;
+    display: inline-block;
+    font-size: 1px;
+    line-height: 1px;
+    color: transparent;
+    vertical-align: top;
+    background-image: url(/p/assets/sprites/search.png?e8b0d83);
+    background-size: 129px 112px;
+    background-position: -57px 0px;
+    width: 25px;
+    height: 24px;
+    mask-image: none;
+    position: absolute;
+    top: 9px;
+    left: 15px;
+}
+
+.input_box {
+    position: relative;
+    z-index: 0;
+    padding-right: 43px;
+}
+
+.label_search {
+    position: absolute;
+    inset: 0px;
+    z-index: -1;
+    color: rgb(156, 156, 156);
+    line-height: 44px;
+    font-weight: normal;
+}
+
+.input_search {
+    position: relative;
+    color: rgb(0, 0, 0);
+    font-weight: bold;
 }
