--- a/templates/main.html
+++ b/templates/main.html
@@ -14,7 +14,7 @@
         header {
             list-style-type: none;
             background-color: white;
-            width: 66px;
+            width: 80px;
             padding: 0;
             margin:  0;
             height: 100%;
@@ -23,6 +23,7 @@
             top: 0;
             z-index: 2;
             font-size: 12px;
+            z-index: 200;
         }
     
         li {
@@ -33,9 +34,9 @@
             text-decoration: none;
             display: block;
             color: #000;
-            padding: 8px 15px 8px 15px;
+            padding: 8px 15px 15px 15px;
             font-weight: bold;
-            font-size: 12px;
+            font-size: 15px;
             display: flex;
             flex-direction: column; 
             align-items: center; 
@@ -60,6 +61,7 @@
             width: 60px;
             height: 60px;
             display: flex;
+            padding-left: 12px;
         }
 
         ul.nav-list {
@@ -77,6 +79,15 @@
 </head>
 <body>
     <div id="map"></div>
+
+    <div class="search_wrap ">
+        <div class="search_box"><button type="button" class="button_search">검색</button>
+            <div class="input_box">
+                <label class="label_search">주소 검색</label>
+                <input type="text" id="input_search" class="input_search" autocomplete="off" maxlength="255" value="">
+            </div>
+        </div>
+    </div>
 
     <div class="search">
         <input id="address" type="text" placeholder="검색할 주소">
