--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
             <div class="masthead-content text-white">
                 <div class="container-fluid px-4 px-lg-0">
                     <h1 class="lh-1 mb-4">Perfect Holmes <br></h1>
-                    <p class="mb-5">목포시 주거지 분석 <br>라이프 스타일 테스트 및 주거진 추천</p>
+                    <p class="mb-5">목포시 주거지 분석 <br>라이프 스타일 테스트 및 주거지 추천</p>
                     <form id="contactForm" data-sb-form-api-token="API_TOKEN">
                         <div class="row input-group-newsletter">
                             <div class="col-auto">
