--- a/templates/main.html
+++ b/templates/main.html
@@ -201,13 +201,11 @@
         </div>
         <hr>
     </div>
-    <div id="map" style="width:100%; height:1000px;"></div>
-    <div>
-        
-        <!-- <img src="https://velog.velcdn.com/images/jejualrock/post/24df6919-9d2e-4ca8-b729-4d207da7ab52/image.png" style="width:100%"> -->
+    <div id="map" style="width:100%; height:700px;"></div>
+    <!-- <div>
+       <img src="https://velog.velcdn.com/images/jejualrock/post/24df6919-9d2e-4ca8-b729-4d207da7ab52/image.png" style="width:100%"> 
     
-    
-    </div>
+    </div> -->
    
    
 </body>
