--- a/templates/signup.html
+++ b/templates/signup.html
@@ -21,6 +21,7 @@
                 <div class="welcome_text" dir="auto">정보를 입력해주세요.</div>
             </div>
             <form>
+                {% csrf_token %}
                 <div class="text_box">닉네임</div>
                 <input class="input_nick" type="text" id="nickname" placeholder="Nickname" value="">
                 <div class="text_box">아이디</div>
@@ -76,7 +77,7 @@
         }
 
         $.ajax({
-            url: "/auth/signup/",
+            url: "/auth/signup",
             dataType: "json",
             data: {
                 username: username,
