--- a/templates/main.html
+++ b/templates/main.html
@@ -17,7 +17,7 @@
             background-color: #ffffff;
             padding: 10px;
             margin:  0;
-            height: 100%;
+            height: 1000px;
             overflow: auto;
             position: absolute;
             top: 10;
@@ -111,8 +111,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <!-- <a class="navbar-brand" href="#"><img  src="/static/img/logo1.png" alt="logo"></a> -->
-          <a class="navbar-brand" href="#"><img  src="logo.png" style="width:190px;" alt="logo"></a>
+          <a class="navbar-brand" href="#"><img  src="/static/img/logo1.png" alt="logo"></a>
           
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -128,28 +127,27 @@
                 <li class="nav-item">
                     <a class="nav-link" style = "color: orange;" href="#"><i class="fas fa-location-arrow"></i> 주변</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fas fa-save"></i> 저장</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" style = "color: brown;"  href="#"><i class="fas fa-book"></i> 주거지 추천</a>
+                    <a class="nav-link" style = "color: brown;"  href="#"><i class="fas fa-book"></i> 집추천</a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        <i class="fas fa-ellipsis-h"></i> 더보기
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#"><i class="fas fa-cog"></i> 설정</a></li>
-                        <li><a class="dropdown-item" href="#"><i class="fas fa-user"></i> 프로필</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt"></i> 로그아웃</a></li>
-                    </ul>
-                </li>
+                
             </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2 search_bar" id="input_search" class="input_search" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-warning button_search" id="search_btn" type="submit" >Search</button>
+            <form class="d-flex justify-content-center" role="search">
+              <input id="address" class="form-control me-2 search_bar" id="input_search" class="input_search" type="text" placeholder="Search" aria-label="Search" value="">
+              <button id="submit" class="btn btn-outline-warning button_search" id="search_btn" type="button" >Search</button>
             </form>
+            <li class="nav-item dropdown" style="list-style:none; margin-right:50px;">
+                <a class="nav-link dropdown-toggle"role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="fas fa-ellipsis-h"></i> 
+                </a>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#"><i class="fas fa-cog"></i> 설정</a></li>
+                    <li><a class="dropdown-item" href="#"><i class="fas fa-user"></i> 프로필</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt"></i> 로그아웃</a></li>
+                </ul>
+            </li>
           </div>
         </div>
       </nav>
@@ -203,7 +201,7 @@
         </div>
         <hr>
     </div>
-    <div id="map"></div>
+    <div id="map" style="width:100%; height:700px;"></div>
     <!-- <div>
        <img src="https://velog.velcdn.com/images/jejualrock/post/24df6919-9d2e-4ca8-b729-4d207da7ab52/image.png" style="width:100%"> 
     
@@ -281,6 +279,7 @@
     });
     $('#submit').on('click', function(e) {
         e.preventDefault();
+        console.log("test");
         searchAddressToCoordinate($('#address').val());
     });
 
@@ -326,7 +325,7 @@
     // 좌표 전송
     function sendCoordinatesToServer(lat, lng) {
         $.ajax({
-            url: '/facility/around/',
+            url: '/facility/around',
             method: 'GET',
             data: {
                 lat: lat,
