--- a/templates/main.html
+++ b/templates/main.html
@@ -213,8 +213,10 @@
 </body>
 <script>
     var map;
-    var marker;
     var circle;
+    var marker;
+    var facilityMarkers = []; // 기존 마커들을 담는 배열
+    var clickedMarker;
 
     // 목포를 기본 지도로
     function selectMapList() {
@@ -230,12 +232,8 @@
         naver.maps.Event.addListener(map, 'click', function(e) {
             var latlng = e.coord;
             updateMarker(latlng);
-            
-            if (marker) {
-                for(var i = 0; i < marker.length; i++){
-                    marker[i].setMap(null);
-                }
-            }
+            removeFacilityMarkers();
+            clickedMarker = null;
         });
     }
 
@@ -295,19 +293,23 @@
         sendCoordinatesToServer(latlng.y, latlng.x);
     }
 
-    
     // 마커 업데이트
     function updateMarker(latlng) {
         // 기존 마커와 반경 초기화
         if (circle) {
             circle.setMap(null);
         }
-    
+        
+        if (marker) {
+            marker.setMap(null);
+        }
+        
+       
         marker = new naver.maps.Marker({
             map: map,
             position: latlng,
         });
-    
+
         // 반경 생성
         circle = new naver.maps.Circle({
             map: map,
@@ -319,10 +321,9 @@
             strokeOpacity: 0.5,
             strokeWeight: 2,
         });
-    
+
         sendCoordinatesToServer(latlng.y, latlng.x);
     }
-    
 
     // 좌표 전송
     function sendCoordinatesToServer(lat, lng) {
@@ -334,6 +335,9 @@
                 lng: lng
             },
             success: function (response) {
+                // 기존 마커들 제거
+                removeFacilityMarkers();
+
                 if (Array.isArray(response) && response.length > 0) {
                     for (var i = 0; i < response.length; i++) {
                         var facility = response[i];
@@ -343,6 +347,8 @@
                             position: facilityLatlng,
                             title: facility.name
                         });
+                        // 새로운 마커를 배열에 추가
+                        facilityMarkers.push(facilityMarker);
                     }
                 } else {
                     alert('주변에 시설이 없습니다.');
@@ -354,6 +360,15 @@
             }
         });
     }
+
+    // 기존 마커들을 모두 제거하는 함수
+    function removeFacilityMarkers() {
+        for (var i = 0; i < facilityMarkers.length; i++) {
+            facilityMarkers[i].setMap(null);
+        }
+        facilityMarkers = [];
+    }
 </script>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
