--- a/templates/main.html
+++ b/templates/main.html
@@ -88,8 +88,8 @@
         }
         /* 추가된 스타일 */
         #map {
-            width: 100%;
-            height: 600px;
+            width: 1000px;
+            height: 2000px;
             margin-top: 20px;
             position: relative; /* 지도와 버튼을 겹쳐서 배치하기 위해 position 속성 추가 */
         } 
