--- a/templates/main.html
+++ b/templates/main.html
@@ -211,8 +211,10 @@
 </body>
 <script>
     var map;
-    var marker;
     var circle;
+    var marker;
+    var facilityMarkers = []; // 기존 마커들을 담는 배열
+    var clickedMarker;
 
     // 목포를 기본 지도로
     function selectMapList() {
@@ -229,11 +231,8 @@
             var latlng = e.coord;
             updateMarker(latlng);
             
-            if (marker) {
-                for(var i = 0; i < marker.length; i++){
-                    marker[i].setMap(null);
-                }
-            }
+            removeFacilityMarkers();
+            clickedMarker = null;
         });
     }
 
@@ -300,6 +299,10 @@
         if (circle) {
             circle.setMap(null);
         }
+
+        if (marker) {
+            marker.setMap(null);
+        }
     
         marker = new naver.maps.Marker({
             map: map,
@@ -332,6 +335,8 @@
                 lng: lng
             },
             success: function (response) {
+                 // 기존 마커들 제거
+                 removeFacilityMarkers();
                 if (Array.isArray(response) && response.length > 0) {
                     for (var i = 0; i < response.length; i++) {
                         var facility = response[i];
@@ -341,6 +346,8 @@
                             position: facilityLatlng,
                             title: facility.name
                         });
+                        // 새로운 마커를 배열에 추가
+                        facilityMarkers.push(facilityMarker);
                     }
                 } else {
                     alert('주변에 시설이 없습니다.');
@@ -351,6 +358,13 @@
                 alert('주변 시설을 불러오지 못했습니다. 다시 시도해주세요.');
             }
         });
+    }
+     // 기존 마커들을 모두 제거하는 함수
+     function removeFacilityMarkers() {
+        for (var i = 0; i < facilityMarkers.length; i++) {
+            facilityMarkers[i].setMap(null);
+        }
+        facilityMarkers = [];
     }
 </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
