working on upload

--- a/templates/main.html
+++ b/templates/main.html
@@ -34,6 +34,10 @@
       <button id="toggle-sidebar" class="btn toggle-btn">></button>
 
       <div class="sidebar">
+        <img
+          class="side-header"
+          src="../static/assets/HeaderImages/sideHeader.png"
+        />
         <div class="side-list"></div>
         <hr />
       </div>
@@ -96,7 +100,7 @@
     <!-- <img class="home-img" src="/static/img/home.png"> -->
 
     <div id="myModal" class="modal">
-      <button class="apply">적용</button>
+      <button class="apply" onclick="searchByFilter()">적용</button>
       <div class="modal-content">
         <span class="close">&times;</span>
         <div class="category-container">
