--- a/static/css/main.css
+++ b/static/css/main.css
@@ -161,6 +161,10 @@ div {
   border-left: none;
 }
 
+.side-header {
+  padding-bottom: 50px;
+}
+
 .sidebar-collapsed + .toggle-btn {
   left: 0;
   transform: translateY(-50%) rotate(180deg);
